@@ -17,6 +17,7 @@
 #include <config.h>
 #include <ucommon/string.h>
 #include <ucommon/thread.h>
+#include <ucommon/socket.h>
 #include <stdarg.h>
 #include <ctype.h>
 #include <stdio.h>
@@ -151,7 +152,7 @@ void string::cstring::add(char ch)
 	text[len++] = ch;	
 	fix();
 }
-
+	
 void string::cstring::set(strsize_t offset, const char *str, strsize_t size)
 {
 	assert(str != NULL);
@@ -202,6 +203,24 @@ strsize_t string::len(void)
 	return str->len;
 }
 
+void string::cstring::add(const StringFormat& format)
+{
+	unfix();
+	if(len < max - 1)
+		format.put(text + len, max - len);
+	text[max - 1] = 0;
+	len = strlen(text);
+	fix();
+}
+
+void string::cstring::set(const StringFormat& format)
+{
+	format.put(text, max);
+	text[max - 1] = 0;
+	len = strlen(text);
+	fix();
+}
+
 void string::cstring::set(const char *str)
 {
 	assert(str != NULL);
@@ -246,6 +265,13 @@ string::string(const char *s)
 	str = create(size);
 	str->retain();
 	str->set(s);
+}
+
+string::string(const StringFormat& f)
+{
+	str = create(f.getStringSize());
+	str->retain();
+	str->set(f);
 }
 
 string::string(const char *s, strsize_t size)
@@ -755,6 +781,13 @@ void string::rset(const char *s, char overflow, strsize_t offset, strsize_t size
 		str->text[offset] = overflow;
 }
 
+void string::set(const StringFormat& f)
+{
+	resize(f.getStringSize());
+	assert(str);
+	str->set(f);
+}
+
 void string::set(const char *s)
 {
 	strsize_t len;
@@ -800,7 +833,11 @@ bool string::resize(strsize_t size)
 		return true;
 	}
 
-	if(str->isCopied() || str->max < size) {
+	if(!str) {
+		str = create(size, fill);
+		str->retain();
+	}
+	else if(str->isCopied() || str->max < size) {
 		fill = str->fill;
 		str->release();
 		str = create(size, fill);
@@ -846,6 +883,14 @@ void string::cow(strsize_t size)
 		str->release();
 		str = s;
 	}
+}
+
+void string::add(const StringFormat& f)
+{
+	if(!str)
+		set(f);
+	else
+		str->add(f);
 }
 
 void string::add(const char *s)
@@ -959,6 +1004,19 @@ string &string::operator^=(const char *s)
 	return *this;
 }
 
+string &string::operator^=(const StringFormat& f)
+{
+	release();
+	set(f);
+	return *this;
+}
+
+string &string::operator=(const StringFormat& f)
+{
+	set(f);
+	return *this;
+}
+
 string &string::operator=(const char *s)
 {
 	set(s);
@@ -1057,9 +1115,22 @@ bool string::operator>=(const char *s) const
     return (compare(s) >= 0);
 }
 
+string &string::operator&(const StringFormat& f)
+{
+	add(f);
+	return *this;
+}
+
 string &string::operator&(const char *s)
 {
 	add(s);
+	return *this;
+}
+
+string &string::operator+(const StringFormat& f)
+{
+	cow(f.getStringSize());
+	add(f);
 	return *this;
 }
 
